--- a/static/stylesheets/theme.scss
+++ b/static/stylesheets/theme.scss
@@ -17,6 +17,10 @@
   visibility: hidden;
   height: 50px;
   background: white;
+
+  a{
+    background: none; // remove reference to logo.png
+  }
 }
 
 .navbar-default .navbar-nav{
@@ -54,28 +58,36 @@
 
   a{
     color: $brand-primary;
-    //font-weight: $font-weight-300;
 
     &:hover{
       color: $text-color;
     }
   }
-
-  /*
-  [class*="icon-"]:before{
-    float: none;
-    margin-right: 5px;
-    margin-left: 5px;
-  }
-  */
 }
 
 // Home
 .home-content .options{
   background: $brand-secondary;
 
-  .option > div .icon{
-    color: $brand-primary;
+  .option > div{
+
+    .option-title:hover h3{
+      color: $text-color;
+    }
+
+    .btn{
+      font-size: 1.125em;
+      font-weight: $font-weight-300;
+
+      &:before{
+        content: "";
+        display: block;
+        width: 19px;
+        height: 19px;
+        margin-top: 1px;
+        background: url(/static/assets/plus-icon.png) no-repeat 0 0 transparent;
+      }
+    }
   }
 }
 
@@ -121,9 +133,14 @@
 }
 
 // Glossary
-.form-search-glossary .btn-default{
-  background: $brand-primary;
+.form-search-glossary .btn-primary{
+  background-color: $brand-primary;
   border-color: $brand-primary;
+
+  &:hover{
+    background-color: mix( $brand-primary, white, 75% );
+    border-color: mix( $brand-primary, white, 75% );
+  }
 }
 .glossary-terms h3, 
 .glossary-terms h4{
@@ -132,6 +149,10 @@
   &:before{
     color: $brand-primary;
   }
+}
+
+.form-search-glossary .form-control{
+  border-color: $brand-primary;
 }
 
 // Search
@@ -149,4 +170,15 @@
       color: white;
     }
   }
+}
+
+// Search Icon
+.form-search-glossary .btn-default:before,
+.form-search .form-inline .btn:before{
+  content: "";
+  display: block;
+  width: 15px;
+  height: 15px;
+  margin-top: 2px;
+  background: url(/static/assets/search-icon.png) no-repeat 0 0 transparent;
 }
