Add missing variable to BCN stylesheet (ongoing work)

--- a/static/stylesheets/theme-variables.scss
+++ b/static/stylesheets/theme-variables.scss
@@ -15,6 +15,7 @@ $brand-secondary:       #F2F2F2;
 $brand-terciary:        #DEF7FB;
 
 $text-color:            #666666;
+$table-color:           $brand-primary;
 
 $headings-color:        $brand-primary;
 
