Update theme styles

--- a/static/stylesheets/theme.scss
+++ b/static/stylesheets/theme.scss
@@ -14,12 +14,32 @@
 
 // Header
 .main-entity-logo{
-  visibility: hidden;
-  height: 50px;
-  background: white;
+  margin: 2*$grid-gutter-width/3 auto;
 
-  a{
-    background: none; // remove reference to logo.png
+  a {
+    color: $brand-primary;
+    font-size: 1.25em;
+    width: auto;
+    height: 70px;
+    padding-left: 60px;
+    line-height: 85px;
+    overflow: hidden;
+    text-indent:0;
+    background-position: 0 center;
+    font-weight: $font-weight-700;
+
+    &:hover{
+      color: $brand-primary-accent;
+      text-decoration: none;
+    }
+  }
+}
+
+.navbar-brand a{
+  color: $brand-primary;
+
+  &:hover{
+    color: $brand-terciary;
   }
 }
 
@@ -121,6 +141,10 @@
 }
 
 // Policies
+.policies-chart{
+  background: $brand-secondary;
+}
+
 .policies-graph{
   background: white;
 }
