--- a/static/stylesheets/theme-variables.scss
+++ b/static/stylesheets/theme-variables.scss
@@ -10,11 +10,13 @@ $gray-light:            lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:          lighten($gray-base, 93.5%) !default; // #eee
 $gray-lightest:         lighten($gray-base, 96%) !default;
 
-$brand-primary:         #009C9B;
+$brand-primary:         #444;
 $brand-secondary:       #F2F2F2;
-$brand-terciary:        #DEF7FB;
+$brand-terciary:        mix( $brand-primary, $brand-secondary, 25% );
 
-$text-color:            #666666;
+$brand-primary-accent:  #3677AE;
+
+$text-color:            #444;
 $table-color:           $brand-primary;
 
 $headings-color:        $brand-primary;
@@ -28,15 +30,15 @@ $bcn-olive:   #1c7da3;
 $bcn-red:￼    #E91B1D;
 */
 
-$link-color:            $brand-primary;
-$link-hover-color:      $link-color;
+$link-color:            $brand-primary-accent;;
+$link-hover-color:      $brand-primary;
 $link-hover-decoration: underline;
 
 
 // Typography
 // -------------
 
-$font-family-sans-serif:  "Source Sans Pro", Helvetica, Arial, sans-serif;
+$font-family-sans-serif:  "Open Sans", Helvetica, Arial, sans-serif;
 $font-family-serif:       Georgia, "Times New Roman", Times, serif;
 $font-family-base:        $font-family-sans-serif;
 
@@ -119,9 +121,9 @@ $footer-bg:     white;
 // Buttons
 // --------------
 
-$btn-default-color:              $text-color;
-$btn-default-bg:                 $brand-secondary;
-$btn-default-border:             $brand-secondary;
+$btn-default-color:              white; //$text-color;
+$btn-default-bg:                 $brand-primary;
+$btn-default-border:             $brand-primary;
 
 $btn-primary-border:             $brand-primary;
 
@@ -156,7 +158,7 @@ $search-form-bg: $brand-secondary;
 // Page Header
 // --------------
 
-$page-header-bg:            $brand-terciary;        //mix( $brand-secondary, white, 8% );
+$page-header-bg:            mix( $brand-terciary, white, 80% ); //mix( $brand-secondary, white, 8% );
 $page-header-border-color:  $brand-primary;  //mix( $brand-secondary, white, 70% );
 
 
@@ -188,5 +190,5 @@ $data-sources-color: $brand-terciary;
 // Sankey Viz
 // --------------
 
-$sankey-budget-color:     mix( $gray-light, $gray-lighter, 50% );
-$sankey-execution-color:  $brand-primary;
+$sankey-budget-color:     darken( $brand-terciary, 5% ); //mix( $gray-light, $gray-lighter, 50% );
+$sankey-execution-color:  lighten( $brand-primary-accent, 10% );
