--- a/templates/shared/fonts.html
+++ b/templates/shared/fonts.html
@@ -1,1 +1,1 @@
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,300italic,200,200italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic' rel='stylesheet' type='text/css'>
