--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -3703,7 +3703,7 @@ pre {
   .row:after {
     clear: both; }
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .home-content .options .option, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .tax-receipt-content .form-user-incomings .form-group, .tax-receipt-content .form-user-incomings .select-info, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .home-content .options .option, .tax-receipt-content .form-user-incomings .form-group, .tax-receipt-content .form-user-incomings .select-info, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
   position: relative;
   min-height: 1px;
   padding-left: 15px;
@@ -3866,7 +3866,7 @@ pre {
   margin-left: 100%; }
 
 @media (min-width: 768px) {
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .home-content .options .option, .col-sm-5, .col-sm-6, .tax-receipt-content .form-user-incomings .form-group, .tax-receipt-content .form-user-incomings .select-info, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .home-content .options .option, .tax-receipt-content .form-user-incomings .form-group, .tax-receipt-content .form-user-incomings .select-info, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left; }
 
   .col-sm-1 {
@@ -3878,13 +3878,13 @@ pre {
   .col-sm-3 {
     width: 25%; }
 
-  .col-sm-4, .home-content .options .option {
+  .col-sm-4 {
     width: 33.33333%; }
 
   .col-sm-5 {
     width: 41.66667%; }
 
-  .col-sm-6, .tax-receipt-content .form-user-incomings .form-group, .tax-receipt-content .form-user-incomings .select-info {
+  .col-sm-6, .home-content .options .option, .tax-receipt-content .form-user-incomings .form-group, .tax-receipt-content .form-user-incomings .select-info {
     width: 50%; }
 
   .col-sm-7 {
@@ -8918,6 +8918,9 @@ label {
   transition: background-color 0.3s ease-out; }
   .data-panel .icon-question:hover {
     background-color: #444; }
+.data-panel p.text-center {
+  max-width: 768px;
+  margin: 0 auto; }
 @media (min-width: 768px) {
   .data-panel:before, .data-panel:after {
     content: " ";
@@ -9558,7 +9561,7 @@ header > .container {
           background: #737373; }
     @media (min-width: 768px) {
       .navbar-default .navbar-nav > li {
-        width: 25%; }
+        width: 33.33333%; }
         .navbar-default .navbar-nav > li > a {
           border-right: 1px solid #a2a2a2;
           border-bottom: none; }
@@ -9788,7 +9791,7 @@ header > .container {
       margin-bottom: 15px; }
     .budget-data .budget-totals .panel-title {
       display: none; }
-      .budget-data .budget-totals .panel-title .col-sm-4, .budget-data .budget-totals .panel-title .home-content .options .option, .home-content .options .budget-data .budget-totals .panel-title .option {
+      .budget-data .budget-totals .panel-title .col-sm-4 {
         padding-right: 0;
         padding-left: 0; }
     .budget-data .budget-totals .panel-content {
@@ -9799,7 +9802,7 @@ header > .container {
         margin-right: 0;
         padding-bottom: 10px;
         border-top: 1px solid #b4b4b4; }
-      .budget-data .budget-totals .panel-content .col-sm-4, .budget-data .budget-totals .panel-content .home-content .options .option, .home-content .options .budget-data .budget-totals .panel-content .option {
+      .budget-data .budget-totals .panel-content .col-sm-4 {
         padding: 10px 0 0; }
       .budget-data .budget-totals .panel-content .data-label {
         float: left;
@@ -9808,7 +9811,7 @@ header > .container {
         border: none;
         font-weight: 600;
         margin-bottom: 0; }
-        .budget-data .budget-totals .panel-content .total-executed > .col-sm-4, .budget-data .budget-totals .panel-content .home-content .options .total-executed > .option, .home-content .options .budget-data .budget-totals .panel-content .total-executed > .option {
+        .budget-data .budget-totals .panel-content .total-executed > .col-sm-4 {
           padding-bottom: 0; }
       .budget-data .budget-totals .panel-content .total-budgeted {
         border-top: none; }
@@ -9830,7 +9833,7 @@ header > .container {
     display: block; }
   .budget-data .budget-totals .panel-content .row {
     padding-bottom: 0; }
-  .budget-data .budget-totals .panel-content .col-sm-4, .budget-data .budget-totals .panel-content .home-content .options .option, .home-content .options .budget-data .budget-totals .panel-content .option {
+  .budget-data .budget-totals .panel-content .col-sm-4 {
     padding: 10px; }
   .budget-data .budget-totals .panel-content .data-label {
     display: none; } }
@@ -9988,7 +9991,7 @@ header > .container {
 
 .glossary-terms {
   padding: 0;
-  margin: 30px 15px; }
+  margin: 0 0 30px; }
   .glossary-terms > tbody {
     border-bottom: 1px solid #ddd; }
   .glossary-terms h3,
@@ -10009,17 +10012,23 @@ header > .container {
       .glossary-terms .term-description ul li {
         margin-bottom: 0.25em; }
 
+.glossary-content .glossary-search-results {
+  border-top: 1px solid #ddd; }
+  .glossary-content .glossary-search-results .alert {
+    display: inline-block;
+    font-size: 1.125em;
+    background: #d2d2d2;
+    margin-top: 30px;
+    margin-bottom: 30px; }
+    .glossary-content .glossary-search-results .alert b {
+      font-weight: 600; }
 .glossary-content .pagination-container {
   text-align: center;
   margin: 30px 0; }
 
 @media (min-width: 768px) {
   .form-search-glossary .form-control {
-    margin: 0 15px; }
-
-  .glossary-terms {
-    margin-left: 30px;
-    margin-right: 30px; } }
+    margin: 0 15px; } }
 .search-content {
   padding-top: 30px; }
   .search-content .table th {
@@ -10099,7 +10108,7 @@ body.widget .widget-title {
   text-align: center; }
   body.widget .widget-title h1 {
     color: #444;
-    font-size: 1.125em;
+    font-size: 1em;
     text-transform: uppercase;
     font-weight: 400;
     margin: 15px; }
@@ -10108,13 +10117,18 @@ body.widget .widget-title {
     body.widget .widget-title:hover h1 {
       color: #444; }
 body.widget .page-title {
-  margin: 20px 0; }
+  display: inline-block;
+  font-size: 1.75em;
+  margin: 0; }
 body.widget .tab-title {
-  text-align: center; }
+  display: inline-block;
+  text-align: center;
+  padding-left: 5px; }
   body.widget .tab-title h3 {
     display: none;
-    font-size: 1.5em;
-    color: #444; }
+    font-size: 1.75em;
+    color: #777777;
+    margin: 0; }
 body.widget .history-back {
   display: none;
   position: absolute;
@@ -10132,7 +10146,10 @@ body.widget .history-back {
       background: #444;
       text-decoration: none; }
 body.widget .policies-chart {
-  padding: 0; }
+  padding: 0;
+  margin-top: 20px; }
+body.widget .tab-content {
+  text-align: center; }
 body.widget .tab-content > a:hover {
   text-decoration: none; }
   body.widget .tab-content > a:hover h2 {
@@ -10142,7 +10159,7 @@ body.widget .tab-pane {
   padding-bottom: 15px; }
 body.widget .data-controllers {
   width: 150px;
-  margin: -10px auto 15px; }
+  margin: -15px auto 20px; }
   body.widget .data-controllers .title {
     padding: 5px 0;
     font-weight: 600;
@@ -10158,6 +10175,8 @@ body.widget .data-controllers {
     display: none; }
 body.widget .chart-embed-btn {
   display: none; }
+body.widget .stacked-area-chart-legend {
+  text-align: left; }
 
 .btn-default:hover {
   border-color: #737373;
