--- a/static/stylesheets/theme.scss
+++ b/static/stylesheets/theme.scss
@@ -206,3 +206,18 @@
   margin-top: 2px;
   background: url(/static/assets/search-icon.png) no-repeat 0 0 transparent;
 }
+
+.tax-receipt-table-content{
+  background: white;
+}
+
+.tax-receipt-content{
+  .form-user-incomings h3{
+    color: $gray-light;
+  }
+
+  .form-user-incomings,
+  #tax-amount{
+    background: $brand-secondary;
+  }
+}
