--- a/static/stylesheets/theme.scss
+++ b/static/stylesheets/theme.scss
@@ -212,12 +212,28 @@
 }
 
 .tax-receipt-content{
-  .form-user-incomings h3{
-    color: $gray-light;
-  }
 
   .form-user-incomings,
   #tax-amount{
     background: $brand-secondary;
+  }
+
+  .form-user-incomings{
+    
+    h3{
+      color: $gray-light;
+    }
+
+    label.bonus{
+      font-weight: normal;
+    }
+
+    .checkbox{
+      clear: both;
+
+      label{
+        line-height: 20px;
+      }
+    }
   }
 }
