--- a/templates/budgets/budgets_indicators.html
+++ b/templates/budgets/budgets_indicators.html
@@ -8,12 +8,12 @@
     </p>
     <p>
       <span><a href="{{ url('budget_app.views.terms')+'?q='+_('Ahorro neto') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ahorro bruto – capítulo IX de gastos (pasivos financieros)') }}"></a> {{ _('Ahorro neto') }}</span>
-      <b class="value value-2014"></b>
+      <b class="value value-2014">769.207 €</b>
       <b class="value value-2015">2.100.790 €</b>
     </p>
     <p>
       <span><a href="{{ url('budget_app.views.terms')+'?q='+_('Capacidad/Necesidad de financiación') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ingresos no financieros (capítulos I-VII) – Gastos no financieros (capítulos I-VII)') }}"></a> {{ _('Capacidad/Necesidad de financiación') }}</span>
-      <b class="value value-2014"></b>
+      <b class="value value-2014">871.306 €</b>
       <b class="value value-2015">1.615.043 €</b>
     </p>
   </div>
