--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -6229,6 +6229,48 @@ label {
   margin-bottom: 30px;
   font-size: 1.125em; }
 
+#cookie-bar {
+  font-size: 13px;
+  height: auto;
+  line-height: 23px;
+  text-align: center;
+  padding: 4px 0;
+  background: #eeeeee; }
+
+#cookie-bar.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; }
+
+#cookie-bar.fixed.bottom {
+  bottom: 0;
+  top: auto; }
+
+#cookie-bar p {
+  margin: 0;
+  padding: 0; }
+
+#cookie-bar a {
+  color: #444;
+  display: inline-block;
+  padding: 0 6px;
+  margin-left: 8px;
+  font-weight: bold; }
+  #cookie-bar a:hover {
+    text-decoration: underline; }
+
+#cookie-bar .cb-enable {
+  color: white;
+  background: #444;
+  text-decoration: none; }
+
+#cookie-bar .cb-enable:hover {
+  color: #444;
+  outline: 1px solid #444;
+  background: transparent;
+  text-decoration: none; }
+
 .sankey .link,
 .sankey .link-execution {
   -webkit-transition: stroke-opacity 0.3s ease-out;
@@ -7013,16 +7055,19 @@ table.table-grid {
       width: 22px;
       margin-top: 1px;
       margin-right: 10px;
-      background-color: dimgray;
+      color: white;
+      background-color: #555555;
       background-position: center center;
       background-repeat: no-repeat;
-      cursor: pointer; }
+      cursor: pointer;
+      text-align: center;
+      font-size: 26px;
+      line-height: 22px;
+      font-weight: 300; }
       table.table-grid tr td .toggle.expand:hover, table.table-grid tr td .toggle.collapse:hover {
         background-color: #444; }
-    table.table-grid tr td .toggle.expand {
-      background-image: url(../assets/slick/expand.png); }
     table.table-grid tr td .toggle.collapse {
-      background-image: url(../assets/slick/collapse.png); }
+      line-height: 18px; }
   table.table-grid tr:last-child td {
     border-bottom: none; }
   table.table-grid tr.indent-1 td,
