--- a/templates/budgets/budgets_indicators.html
+++ b/templates/budgets/budgets_indicators.html
@@ -3,18 +3,18 @@
   <div class="panel-content">
     <p>
       <span><a href="{{ url('budget_app.views.terms')+'?q='+_('Ahorro bruto') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ingresos corrientes (capítulos I-V) - Gastos corrientes (capítulos I-V)') }}"></a> {{ _('Ahorro bruto') }}</span>
-      <b class="value value-2014">1.575.109 €</b>
-      <b class="value value-2015">2.978.234 €</b>
+      <strong class="value value-2014">1.575.109 €</strong>
+      <strong class="value value-2015">2.978.234 €</strong>
     </p>
     <p>
       <span><a href="{{ url('budget_app.views.terms')+'?q='+_('Ahorro neto') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ahorro bruto – capítulo IX de gastos (pasivos financieros)') }}"></a> {{ _('Ahorro neto') }}</span>
-      <b class="value value-2014">769.207 €</b>
-      <b class="value value-2015">2.100.790 €</b>
+      <strong class="value value-2014">769.207 €</strong>
+      <strong class="value value-2015">2.100.790 €</strong>
     </p>
     <p>
       <span><a href="{{ url('budget_app.views.terms')+'?q='+_('Capacidad/Necesidad de financiación') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ingresos no financieros (capítulos I-VII) – Gastos no financieros (capítulos I-VII)') }}"></a> {{ _('Capacidad/Necesidad de financiación') }}</span>
-      <b class="value value-2014">871.306 €</b>
-      <b class="value value-2015">1.615.043 €</b>
+      <strong class="value value-2014">871.306 €</strong>
+      <strong class="value value-2015">1.615.043 €</strong>
     </p>
   </div>
 </div>
