--- a/static/stylesheets/scss/theme-variables.scss
+++ b/static/stylesheets/scss/theme-variables.scss
@@ -17,7 +17,6 @@ $brand-terciary:        mix( $brand-primary, $brand-secondary, 25% );
 $brand-primary-accent:  #3677AE;
 
 $text-color:            #444;
-$table-color:           $brand-primary;
 
 $headings-color:        $brand-primary;
 
@@ -88,6 +87,13 @@ $dvmi-navbar-color: mix( $brand-primary, white, 10% );
 
 $navbar-default-link-active-color:    white;
 $navbar-default-link-active-bg:       mix( $navbar-default-bg, white, 75% );
+
+
+// Panels
+// ---------------
+
+$panel-default-border:      $brand-primary;
+$panel-default-heading-bg:  $brand-primary;
 
 
 // Popover
@@ -174,12 +180,6 @@ $budget-stream-color: $brand-secondary;
 
 $slider-bg:     mix( $gray-light, $gray-lighter, 50% );
 $slider-color:  $brand-primary;
-
-
-// Data Panel
-// --------------
-
-$data-panel-color: $brand-primary;
 
 
 // Data Sources
