--- a/templates/tax_receipt/tax_receipt_form.html
+++ b/templates/tax_receipt/tax_receipt_form.html
@@ -29,7 +29,12 @@
       <label class="bonus" for="select-house-bonus">{{ _('Bonificación Inmueble') }}</label>
       <select id="select-house-bonus" class="form-control">
         <option value="0" type="text" selected="selected">{{ _('Ninguna') }}</option>
-        <option value="1" type="text">{{ _('Familia numerosa general o monoparental con valor catastral menor de 150.000€') }} (50%)</option>
+        <option value="1" type="text">{{ _('Familia numerosa o monoparental general con valor catastral menor de 80.000€') }} (70%)</option>
+        <option value="2" type="text">{{ _('Familia numerosa o monoparental general con valor catastral entre 80.001€ y 160.000€') }} (50%)</option>
+        <option value="3" type="text">{{ _('Familia numerosa o monoparental general con valor catastral entre 160.001€ y 320.000€') }} (30%)</option>
+        <option value="4" type="text">{{ _('Familia numerosa o monoparental especial con valor catastral menor de 80.000€') }} (80%)</option>
+        <option value="5" type="text">{{ _('Familia numerosa o monoparental especial con valor catastral entre 80.001€ y 160.000€') }} (60%)</option>
+        <option value="6" type="text">{{ _('Familia numerosa o monoparental especial con valor catastral entre 160.001€ y 320.000€') }} (40%)</option>
       </select>
     </div>
   </div>
