Update tax receipt section for 2020
civio/presupuesto-management#1034

--- a/templates/tax_receipt/tax_receipt_script.html
+++ b/templates/tax_receipt/tax_receipt_script.html
@@ -16,18 +16,18 @@
     }
 
     function getHouseTaxPaid() {
-      var val = [376, 318, 665, 353, 381, 935, 747, 183, 292, 522, 591, 631, 800, 387, 1031, 433][$("#select-house").val()];
+      var val = [385, 326, 820, 362, 390, 959, 766, 188, 300, 535, 267, 606, 607, 820, 397, 1057, 444][$("#select-house").val()];
       var bonus = [0, 0.7, 0.5, 0.3, 0.8, 0.6, 0.4][$('#select-house-bonus').val()];
       return val*(1-bonus);
     }
     function getVehicleTaxPaid() {
       var val = [0, 68.16, 143.88][$("#select-vehicle").val()];
-      var bonus = [0, 1, 0.5, 0.5][$('#select-vehicle-bonus').val()];
+      var bonus = [0, 1, 1, 0.5][$('#select-vehicle-bonus').val()];
       return val*(1-bonus);
     }
     function getExtraVehicleTaxPaid() {
       var val = [0, 68.16, 143.88][$("#select-extra-vehicle").val()];
-      var bonus = [0, 1, 0.5, 0.5][$('#select-extra-vehicle-bonus').val()];
+      var bonus = [0, 1, 1, 0.5][$('#select-extra-vehicle-bonus').val()];
       return val*(1-bonus);
     }
     function getGarbageTaxPaid() {
@@ -35,7 +35,7 @@
       var bonus2 = ($("#select-garbage-bonus-2").is(':checked')) ? 0.4 : 0;
       var bonus3 = [0, 0.1, 0.2, 0.3, 0.4][$("#select-garbage-bonus-3").val()];
       var bonus = (bonus1 > 0) ? bonus1 : bonus2+bonus3;
-      return 95*(1-bonus);
+      return 99*(1-bonus);
     }
     function getParkingTaxPaid() {
       return [0, 27.6, 36.8][$("#select-parking").val()];
