--- a/templates/tax_receipt/tax_receipt_form.html
+++ b/templates/tax_receipt/tax_receipt_form.html
@@ -16,12 +16,13 @@
         <option value="7" type="text">{{ _('Piso de 60 m\u00B2 en el Centro') }}</option>
         <option value="8" type="text">{{ _('Piso de 100 m\u00B2 en el Centro') }}</option>
         <option value="9" type="text">{{ _('Piso de 130 m\u00B2 en el Centro') }}</option>
-        <option value="10" type="text">{{ _('Casa de 240 m\u00B2 en el Centro') }}</option>
-        <option value="11" type="text">{{ _('Piso de 145 m\u00B2 en Creueta/Rambla') }}</option>
-        <option value="12" type="text">{{ _('Casa de 250 m\u00B2 en Creueta/Rambla') }}</option>
-        <option value="13" type="text">{{ _('Piso de 100 m\u00B2 en Romaní-Nord') }}</option>
-        <option value="14" type="text">{{ _('Casa de 270 m\u00B2 en Romaní-Nord') }}</option>
-        <option value="15" type="text">{{ _('Casa de 210 m\u00B2 en Serra Maurina') }}</option>
+        <option value="10" type="text">{{ _('Piso de 90 m\u00B2 en el Centro') }}</option>
+        <option value="11" type="text">{{ _('Casa de 240 m\u00B2 en el Centro') }}</option>
+        <option value="12" type="text">{{ _('Piso de 145 m\u00B2 en Creueta/Rambla') }}</option>
+        <option value="13" type="text">{{ _('Casa de 250 m\u00B2 en Creueta/Rambla') }}</option>
+        <option value="14" type="text">{{ _('Piso de 100 m\u00B2 en Romaní-Nord') }}</option>
+        <option value="15" type="text">{{ _('Casa de 270 m\u00B2 en Romaní-Nord') }}</option>
+        <option value="16" type="text">{{ _('Casa de 210 m\u00B2 en Serra Maurina') }}</option>
       </select>
     </div>
     <div class="select-info">{{ _('IBI') }}: <span id="select-house-tax"></span></div>
@@ -38,7 +39,7 @@
       </select>
     </div>
   </div>
-    
+
   <div class="row">
     <div class="form-group">
       <label for="select-vehicle">{{ _('Vehículo') }}</label>
@@ -54,12 +55,12 @@
       <select id="select-vehicle-bonus" class="form-control">
         <option value="0" type="text" selected="selected">{{ _('Ninguna') }}</option>
         <option value="1" type="text">{{ _('Vehículo histórico') }} (100%)</option>
-        <option value="2" type="text">{{ _('Vehículo de más de 25 años') }} (50%)</option>
+        <option value="2" type="text">{{ _('Vehículo de más de 25 años') }} (100%)</option>
         <option value="3" type="text">{{ _('Vehículo biocombusticle / eléctrico / ahorro energético') }} (50%)</option>
       </select>
     </div>
   </div>
-    
+
   <div class="row">
     <div class="form-group">
       <label for="select-extra-vehicle">{{ _('Vehículo adicional') }}</label>
@@ -75,13 +76,13 @@
       <select id="select-extra-vehicle-bonus" class="form-control">
         <option value="0" type="text" selected="selected">{{ _('Ninguna') }}</option>
         <option value="1" type="text">{{ _('Vehículo histórico') }} (100%)</option>
-        <option value="2" type="text">{{ _('Vehículo de más de 25 años') }} (50%)</option>
+        <option value="2" type="text">{{ _('Vehículo de más de 25 años') }} (100%)</option>
         <option value="3" type="text">{{ _('Vehículo biocombusticle / eléctrico / ahorro energético') }} (50%)</option>
       </select>
     </div>
   </div>
-    
-  
+
+
   <h3>{{ _('Tasas') }}</h3>
 
   <div class="row">
