Add 2020 budget indicators
civio/presupuesto-management#1094

--- a/templates/budgets/budgets_indicators.html
+++ b/templates/budgets/budgets_indicators.html
@@ -14,6 +14,7 @@
         <strong class="value value-2017">2.934.345 €</strong>
         <strong class="value value-2018">939.677 €</strong>
         <strong class="value value-2019">1.252.881 €</strong>
+        <strong class="value value-2020">2.554.804 €</strong>
       </div>
     </div>
     <div class="row">
@@ -27,6 +28,7 @@
         <strong class="value value-2017">2.590.774 €</strong>
         <strong class="value value-2018">976.788 €</strong>
         <strong class="value value-2019">1.051.906 €</strong>
+        <strong class="value value-2020">1.763.818 €</strong>
       </div>
     </div>
     <div class="row">
@@ -40,6 +42,7 @@
       <strong class="value value-2017">1.081.821 €</strong>
       <strong class="value value-2018">-1.681.539 €</strong>
       <strong class="value value-2019">17.087 €</strong>
+      <strong class="value value-2020">1.099.062 €</strong>
     </div>
   </div>
 </div>
