Add 2021 budget indicators
civio/presupuesto-management#1195

--- a/templates/budgets/budgets_indicators.html
+++ b/templates/budgets/budgets_indicators.html
@@ -15,6 +15,7 @@
         <strong class="value value-2018">939.677 €</strong>
         <strong class="value value-2019">1.252.881 €</strong>
         <strong class="value value-2020">2.554.804 €</strong>
+        <strong class="value value-2021">1.503.064 €</strong>
       </div>
     </div>
     <div class="row">
@@ -29,6 +30,7 @@
         <strong class="value value-2018">976.788 €</strong>
         <strong class="value value-2019">1.051.906 €</strong>
         <strong class="value value-2020">1.763.818 €</strong>
+        <strong class="value value-2021">826.614 €</strong>
       </div>
     </div>
     <div class="row">
@@ -43,6 +45,7 @@
       <strong class="value value-2018">-1.681.539 €</strong>
       <strong class="value value-2019">17.087 €</strong>
       <strong class="value value-2020">1.099.062 €</strong>
+      <strong class="value value-2021">636.843 €</strong>
     </div>
   </div>
 </div>
