--- a/templates/budgets/budgets_indicators.html
+++ b/templates/budgets/budgets_indicators.html
@@ -5,7 +5,7 @@
   <div class="panel-content">
     <div class="row">
       <div class="col-sm-8">
-        <a href="{{ url('budget_app.views.terms')+'?q='+_('Ahorro bruto') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ingresos corrientes (capítulos I-V) - Gastos corrientes (capítulos I-V)') }}"></a> {{ _('Ahorro bruto') }}
+        <a href="{{ url('glossary')+'?q='+_('Ahorro bruto') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ingresos corrientes (capítulos I-V) - Gastos corrientes (capítulos I-V)') }}"></a> {{ _('Ahorro bruto') }}
       </div>
       <div class="col-sm-4">
         <strong class="value value-2014">1.575.109 €</strong>
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
       <div class="col-sm-8">
-        <a href="{{ url('budget_app.views.terms')+'?q='+_('Ahorro neto') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ahorro bruto – capítulo IX de gastos (pasivos financieros)') }}"></a> {{ _('Ahorro neto') }}
+        <a href="{{ url('glossary')+'?q='+_('Ahorro neto') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ahorro bruto – capítulo IX de gastos (pasivos financieros)') }}"></a> {{ _('Ahorro neto') }}
       </div>
       <div class="col-sm-4">
         <strong class="value value-2014">769.207 €</strong>
@@ -35,7 +35,7 @@
     </div>
     <div class="row">
       <div class="col-sm-8">
-        <a href="{{ url('budget_app.views.terms')+'?q='+_('Capacidad/Necesidad de financiación') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ingresos no financieros (capítulos I-VII) – Gastos no financieros (capítulos I-VII)') }}"></a> {{ _('Capacidad/Necesidad de financiación') }}
+        <a href="{{ url('glossary')+'?q='+_('Capacidad/Necesidad de financiación') }}" class="icon-question" data-toggle="tooltip" data-placement="right" title="{{ _('Ingresos no financieros (capítulos I-VII) – Gastos no financieros (capítulos I-VII)') }}"></a> {{ _('Capacidad/Necesidad de financiación') }}
       </div>
     <div class="col-sm-4">
       <strong class="value value-2014">875.881 €</strong>
